re PR c++/29020 (ICE using A<N>::A instead of A<N> in friend declaration)

PR c++/29020
	* friend.c (do_friend): Improve comments; add assertion.
	* parser.c (cp_parser_nested_name_specifier_opt): Resolve
	typenames for qualified names used in declarations, even when
	caching qualified name lookup.
	PR c++/29020
	* g++.dg/template/friend48.C: New test.

From-SVN: r117425